data/collection/fixes/descriptions/scala/scala-4447
```scala
scala> def g[A, B >: A] {}
g: [A,B >: A]=> Unit

scala> def f[A, B, C >: A <: B] = g[A, B]
<console>:8: error: type arguments [A,B] do not conform to method g's type parameter bounds [A,B >: A]
       def f[A, B, C >: A <: B] = g[A, B]
                                   ^
```
Since <: is transitive, C >: A <: B immediately implies that A <: B, but right now the compiler doesn't "see" it.
See also https://groups.google.com/d/topic/scala-user/YX97K0jYZ60/discussion